--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <picture>
                 <source media="(max-width: 620px)" srcset="pacote-arquivos/imagens/dan-droids-pq.png">
-                <img src="pacote-arquivos/imagens/dan-droids.png" alt="Imagem do primeiro Android">
+                <img src="imagens/dan-droids.png" alt="Imagem do primeiro Android">
             </picture>
 
             <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os Dandroids.</p>
@@ -43,13 +43,13 @@
             <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com/android" class="externo" target="_blank">Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
 
             <picture>
-                <source media="(max-width: 620px)" srcset="pacote-arquivos/imagens/irina-blok-pq.jpg">
-                <img src="pacote-arquivos/imagens/irina-blok.jpg" alt="Criadora do Android">
+                <source media="(max-width: 620px)" srcset="imagens/irina-blok-pq.jpg">
+                <img src="imagens/irina-blok.jpg" alt="Criadora do Android">
             </picture>
 
             <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <stong>Bugdroid</stong>, o novo mascote do Android.</p>
 
-            <img src="pacote-arquivos/imagens/bugdroid.png" alt="Imagem do Bugdroid" class="pequena">
+            <img src="imagens/bugdroid.png" alt="Imagem do Bugdroid" class="pequena">
 
             <p>A principal inspiração para os traços do novo <strong>Bugdroid</strong> veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do <strong>Google</strong> e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
 
